--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=https://cssdbk.onrender.com
+DATABASE_URL="postgresql://db_supply_user:SpliOhD4J3owK47J7BQJ3f305IrF56wn@dpg-d253ruje5dus73f7nnmg-a.oregon-postgres.render.com/db_supply?charset=utf8mb4"
